--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "bootstrap-icons": "^1.10.3",
     "json-server": "^0.17.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
